// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text/Tag Pill 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    pillStyle={true}
  >
    <span
      className="tag is-pill"
    >
      Pill Style
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Pill And Flagged 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    pillStyle={true}
    styleType="is-flagged"
  >
    <span
      className="tag is-flagged is-pill"
    >
      Flagged
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Pill And Success 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    pillStyle={true}
    styleType="is-success"
  >
    <span
      className="tag is-success is-pill"
    >
      Pill Success
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Pill Small 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    pillStyle={true}
    size="is-small"
  >
    <span
      className="tag is-small is-pill"
    >
      Pill Small
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Small 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    size="is-small"
  >
    <span
      className="tag is-small"
    >
      Warning
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Standard 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag>
    <span
      className="tag"
    >
      Tag
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Success 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    styleType="is-success"
  >
    <span
      className="tag is-success"
    >
      Success
    </span>
  </Tag>
</div>
`;

exports[`Storyshots Text/Tag Warning 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Tag
    styleType="is-warning"
  >
    <span
      className="tag is-warning"
    >
      Warning
    </span>
  </Tag>
</div>
`;
